# veo-studio

./: .env.example  .gitignore  CHANGELOG.md  CHANGELOG_zh-CN.md  LICENSE  README.md  README_zh-CN.md  config.json.example  config.py  gui.py  main.py  pyproject.toml  requirements.txt  utils.py  uv.toml  veo_client.py
app/: __init__.py  config.py  gui.py  veo_client.py
app/prompts/: reference_video_analysis.txt  reference_video_analysis_en.txt
