[project]
name = "veo-studio"
version = "1.2.0"
description = "A modern desktop GUI application for generating videos using Google's Veo 3.1 model"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "google-genai>=1.56.0",
    "python-dotenv>=1.2.1",
    "PySide6>=6.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
# 开发依赖
dev = [
    "pytest>=9.0.2",
    "black>=25.12.0",
    "ruff>=0.14.9",
]
